apps/registry/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
